--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "quote-dashboard",
-  "version": "1.0.0",
-  "description": "dashboard for collecting quotes that resonate",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongodb": "^6.13.1",
-    "mongoose": "^8.11.0",
-    "nodemon": "^3.1.9"
-  }
+    "name": "quote-dashboard", 
+    "version": "1.0.0",
+    "description": "A full-stack app for storing and displaying quotes",
+    "scripts": {
+        "dev":"concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
+    },
+    "devDependencies": {
+        "concurrently":"^9.1.2"
+    },
+    "dependencies": {
+        "dotenv":"^16.4.7"
+    }
 }
