--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "quote-dashboard", 
+    "name": "quote-dashboard",
     "version": "1.0.0",
     "description": "A full-stack app for storing and displaying quotes",
     "scripts": {
-        "dev":"concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
+        "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
     },
     "devDependencies": {
-        "concurrently":"^9.1.2"
+        "concurrently": "^9.1.2"
     },
     "dependencies": {
-        "dotenv":"^16.4.7"
+        "dotenv": "^16.5.0",
+        "nodemon": "^3.1.10"
     }
 }
